Issue #3842: added visible border to currently focused element
only in highcontrast skin

--- a/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.PageLayout.css
+++ b/var/httpd/htdocs/skins/Agent/highcontrast/css/Core.PageLayout.css
@@ -61,4 +61,9 @@ along with this program. If not, see <https://www.gnu.org/licenses/>.
     color: var(--colTextDark);
 }
 
+.ItemListGrid.WithIcons > li a:not(.Disabled):focus span.Icons,
+.ItemListGrid.WithIcons > li a:not(.Disabled):hover span.Icons {
+    background-color: var(--colBGLight);
+}
+
 } /* end @media */
